Fix not being able to change shelf alignment in Unified Desktop Mode

Make it possible to set a per-display shelf pref setting for the Unified
display. Add test coverage for the case when a per-display shelf settings
was added prior to enabling Unified Mode, which used to result in not being
able to set the shelf alignment after going into Unified Mode.

BUG=665696
TEST=Added test coverage

Change-Id: I57c35801721c0e3e6b3d0c60237be26ef1c3abe0
Reviewed-on: https://chromium-review.googlesource.com/816135
Reviewed-by: James Cook <jamescook@chromium.org>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Commit-Queue: Ahmed Fakhry <afakhry@chromium.org>
Cr-Commit-Position: refs/heads/master@{#522819}
Former-commit-id: 30a718372e1c872ef6dff7b2e93a0add15277c7b